@@ -26,7 +26,7 @@
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                     <encoding>UTF-8</encoding>
-                    <compilerArgument>--enable-preview</compilerArgument>
+                    <enablePreview>true</enablePreview>
                 </configuration>
             </plugin>
             <plugin>
@@ -53,14 +53,10 @@
                     </execution>
                 </executions>
             </plugin>
-                    </plugins>
+        </plugins>
     </build>
 
     <dependencies>
-        <dependency>
-            <groupId>io.mercury</groupId>
-            <artifactId>serialization-sbe</artifactId>
-        </dependency>
         <dependency>
             <groupId>io.mercury</groupId>
             <artifactId>serialization-json</artifactId>
